fixed spacing on mobile social profiles and pagination module

--- a/static/css/timetable/pagination.css
+++ b/static/css/timetable/pagination.css
@@ -21,7 +21,7 @@
 .sem-pages {
 	list-style-type: none;
 	display: inline-block;
-	padding: 0 15px 0 10px;
+	padding: 0 6px 0 10px;
     white-spac e: nowrap;
     word-wrap:break-word;
     max-width: 317px;
